[package]
name = "berry-battler"
version = "0.1.0"
authors = ["Aven Arlington<aven.arlington@gmail.com>"]
description = "Template for a Berry Battle combatant"
repository = "https://github.com/berrybattle/berry-battler"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTE: Remember to revert this for release build!
# Otherwise you will need to include libbevy_dylib alongside the exe.
bevy = { version = "0.12.1", features = ["dynamic_linking"] }

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
