[package]
name = "berry-battler"
version = "0.1.0"
authors = ["Aven Arlington<aven.arlington@gmail.com>"]
description = "Template for a Berry Battle combatant"
repository = "https://github.com/berrybattle/berry-battler"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "berry-battler"
path = "src/main.rs"

[features]
gcp = ["dep:prost-types", "tonic/tls"]
autoreload = ["tokio-stream/net"]
grpc-web = ["dep:bytes"]
tracing = ["dep:tracing"]
hyper-warp = ["dep:either"]
hyper-warp-multiplex = ["hyper-warp"]
uds = ["tokio-stream/net"]
streaming = ["tokio-stream"]
compression = ["tonic/gzip"]
tls = ["tonic/tls"]
timeout = ["tokio/time"]
tls-client-auth = ["tonic/tls"]
cancellation = ["dep:tokio-util"]

full = [
   "gcp",
   "autoreload",
   "grpc-web",
   "tracing",
   "hyper-warp",
   "hyper-warp-multiplex",
   "uds",
   "streaming",
   "compression",
   "tls",
   "timeout",
   "tls-client-auth",
   "cancellation",
]
default = ["full"]

[dependencies]
# gRPC dependencies
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.12"
tonic = { version = "0.*" }
either = { version = "1.9", optional = true }
async-stream = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-util = { version = "0.7.8", optional = true }
rand = { version = "0.8", optional = true }
tracing = { version = "0.*", optional = true }
prost-types = { version = "0.12", optional = true }
bytes = { version = "1", optional = true }
tower-http = { version = "0.*", optional = true }

# Build dependencies for gRPC
[build-dependencies]
tonic-build = { version = "0.*", features = ["prost"] }

# Items below are for Bevy
# [dependencies]
# NOTE: Remember to revert this for release build!
# Otherwise you will need to include libbevy_dylib alongside the exe.
# bevy = { version = "0.12.1", features = ["dynamic_linking"] }

# [target.x86_64-unknown-linux-gnu]
# linker = "clang"
# rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

# # Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3
